fix book review overlaps

--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -772,17 +772,18 @@ a {
   position: absolute;
   top: 3em;
   left: -50%;
-  z-index: 10;
   padding: 1em;
   border-radius: 1em;
   width: 20em;
   background-color: #1a1a1a;
   opacity: 0;
   transition: 1s;
+  z-index: -1;
 }
 
 .hover-container:hover .hover-element {
   opacity: 1;
+  z-index: 10;
 }
 
 @font-face {
